--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,5 @@ laradock/.DS_Store
 laradock/workspace/insecure_id_rsa
 laradock/workspace/insecure_id_rsa.ppk
 laradock/workspace/insecure_id_rsa.pub
+
+laradock/.laradock/data/
