--- a/todo-with-laradock/package.json
+++ b/todo-with-laradock/package.json
@@ -11,7 +11,11 @@
         "axios": "^1.8.2",
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^2.0.0",
-        "tailwindcss": "^4.0.0",
-        "vite": "^7.0.4"
+        "tailwindcss": "^4.1.11",
+        "vite": "^7.0.6"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.21",
+        "postcss": "^8.5.6"
     }
 }
